used vh on overlay instead of %, should fix overlay not sizing correctly on mobile

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -25,7 +25,7 @@ $background-opacity: 0.7;
             background: rgba($primary-color,$background-opacity);
             position: absolute;
             width: 100%;
-            height: 100%;
+            height: 100vh;
             top: 0;
             right: 0;
          }
